# gloriouscpp

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  LICENCE.txt  LICENSE.txt  NEWS  README.md
doc/: glorious.txt
programs/runscript/: README.txt  install-root.sh  install-user.sh
programs/runscript/example/: multiply.cpp
programs/runscript/src/: runscriptcpp11
src/examples/: CMakeLists.txt
src/examples/code_style/: CMakeLists.txt  style.cpp
src/examples/log/: CMakeLists.txt  glorious_use_log.cpp
src/libs/: CMakeLists.txt
src/libs/example/: Makefile  style.cpp
src/libs/glor/: lib_options.cmake
src/libs/glor/ipc/: CMakeLists.txt  ipc.cpp  ipc.hpp  liboneinstance.cpp  liboneinstance.hpp  msg_mutex.cpp  msg_mutex.hpp
src/libs/glor/skel/: CMakeLists.txt  skel.cpp
src/libs/glor/system/: CMakeLists.txt  internal_test.cpp  internal_test.hpp  libsimpleconvert.cpp  libsimpleconvert.hpp  utils.hpp
src/libs/ipc/: CMakeLists.txt
src/libs/main/: utils.cpp
src/libs/skel/: skel.hpp
src/libs/system/: CMakeLists.txt  runoptions.cpp  runoptions.hpp  utils.cpp  utils.hpp
